# carrier

./: .gitignore  .mcp.json  AGENTS.md  README.md  package.json
.github/scripts/: generate-release-notes.mjs
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/inject/: mcp-bridge.js  mcp_listener.js  messenger.css  messenger.js  panel.js
src-tauri/src/: lib.rs  main.rs
