[package]
name = "carrier"
version = "0.2.0"
description = "A tiny, distraction-free desktop client for Facebook Messenger"
authors = ["kristofferR"]
edition = "2021"
# Keep in step with the highest dependency MSRV (Tauri 2 + plugins) so the
# advertised minimum is actually buildable.
rust-version = "1.82"

[lib]
# The Tauri app logic lives in a lib so it can be shared with mobile targets.
name = "carrier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
open = "5"
dark-light = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
