[package]
name = "carrier"
version = "1.0.0"
description = "A tiny, distraction-free desktop client for Facebook Messenger"
authors = ["kristofferR"]
edition = "2021"
# Keep in step with the highest dependency MSRV (Tauri 2 + plugins) so the
# advertised minimum is actually buildable.
rust-version = "1.82"

[lib]
# The Tauri app logic lives in a lib so it can be shared with mobile targets.
name = "carrier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Dev-only AI/DOM inspection over a local socket. Enable with `--features mcp`
# (e.g. `cargo tauri dev --features mcp`); never enabled for release builds.
mcp = ["dep:tauri-plugin-mcp"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
open = "5"
dark-light = "1"
# Already in the tree via Tauri; the short delay when recreating a window on a
# theme switch (the macOS title bar can only be re-themed at window creation).
tokio = { version = "1", features = ["time"] }
# Dev-only (the `mcp` feature): webview inspection over a local socket.
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

# macOS only: Tauri doesn't disable the WKWebView's opaque white background on
# macOS (the webview layer is unimplemented there), so the theme-coloured window
# background never shows through. Flip `drawsBackground` off ourselves via KVC.
# Same versions Tauri already pulls in, so no extra build cost.
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSValue"] }
objc2-user-notifications = { version = "0.3.2", features = ["UNUserNotificationCenter", "UNNotificationSettings", "block2"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
